--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
-    "dev": "SET NODE_ENV=production && nodemon ./build/server.js"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test",
+    "dev": "SET NODE_ENV=production && nodemon ./build/server.js",
+    "start": "node ./build/server.js"
   },
   "husky": {
     "hooks": {
@@ -28,20 +31,28 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.3",
-    "q": "^1.5.1"
+    "q": "^1.5.1",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.7",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/helmet": "^0.0.45",
+    "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.36",
     "@types/morgan": "^1.7.37",
+    "@types/swagger-ui-express": "^4.1.0",
+    "chai": "^4.2.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "mocha": "^6.2.2",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
+    "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
