--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
+NODE_ENV=production
 PORT=8000
-NODE_ENV=development
 DB_LOCAL=mongodb://localhost/test
 DB_CONNECTION=mongodb+srv://elfinsanjaya:Copyright12@cluster0-vnlpo.gcp.mongodb.net/db_text?retryWrites=true&w=majority
