--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
