--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongodb": "^3.3.14",
     "@types/mongoose-promise": "^4.5.9",
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -34,6 +35,7 @@
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
     "q": "^1.5.1",
+    "redis": "^2.8.0",
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.36",
     "@types/morgan": "^1.7.37",
+    "@types/redis": "^2.8.14",
     "@types/swagger-ui-express": "^4.1.0",
     "chai": "^4.2.0",
     "husky": "^3.1.0",
