--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@ node_js:
   - "12.13.0"
 install:
   - npm install
+  dist: trusty
+sudo: false
+addons:
+  apt:
+    packages:
+    - redis-tools
+services:
+  - redis-server
+script: echo PING | nc localhost 6379
